--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <title>Requests in JS lab!</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
     <style>
         #repeat-text {
             font-size: xx-large;
@@ -26,5 +27,11 @@
 
     <p id='hello-text'>Hello World!</p>
     <p id='repeat-text'></p>
+
+    <form>
+        <input type="text" placeholder="enter a food">
+        <button>Add Food</button>
+    </form>
+    <ul></ul>
 </body>
 </html>
